[bug 884084] Fix cut off text and max description length

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -127,6 +127,9 @@ a {
     background: #FFF;
     .rotateY(180deg);
   }
+  &.medium .description {
+    display: none;
+  }
 }
 
 .make-item-title {
@@ -193,8 +196,6 @@ a {
     line-height: 1.3;
     font-size: 1.3em;
     margin-bottom: 0.5em;
-    max-height: 3.6em;
-    overflow: hidden;
   }
   p {
     color: #999;
@@ -204,10 +205,6 @@ a {
     &:hover {
       color: @green;
     }
-  }
-  .desc {
-    overflow: hidden;
-    height: 9.8em;
   }
   .author-date{
     font-size: 0.9em;
